WS_INTEGRATION/force-app/main/default/objects/Division2Contact__c/Division2Contact__c.object-meta.xml
<CustomObject>
    <description>Junction object for Division and Contact. NOT Master-Detail</description>
    <label>Division2Contact</label>
    <nameField>
        <label>Division2Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Division2Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>