WS_INTEGRATION/force-app/main/default/objects/Division2Contact__c/fields/Active_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Active_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact is active in the Department</description>
    <inlineHelpText>Is the contact active within the division?</inlineHelpText>
    <label>Active Relationship</label>
    <type>Checkbox</type>
</CustomField>