WS_INTEGRATION/force-app/main/default/objects/Division2Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Division2Contacts</relationshipLabel>
    <relationshipName>Divisions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>