WS_INTEGRATION/force-app/main/default/objects/Division2Contact__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Division</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Division__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Defaulted to only include active Divisions. This filter can be removed.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Division2Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>