WS_INTEGRATION/force-app/main/default/objects/Division2Contact__c/fields/Full_Division_Name_Backward__c.field-meta.xml
<CustomField>
    <fullName>Full_Division_Name_Backward__c</fullName>
    <formula>CASE( Division__r.Cost_Center__c , "", "", Division__r.Cost_Center__c &amp; ", ") &amp; Division__r.Department__c &amp; ", " &amp; Division__r.Unit__c &amp; ", " &amp; Division__r.School__c &amp; ", " &amp; Division__r.Campus__c</formula>
    <label>Full Division Name</label>
    <type>Text</type>
</CustomField>