WS_INTEGRATION/force-app/main/default/objects/Division2Contact__c/fields/Inactive_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The contact is no longer connected to this Division</inlineHelpText>
    <label>Inactive Relationship</label>
    <type>Checkbox</type>
</CustomField>