WS_INTEGRATION/force-app/main/default/objects/Division2Contact__c/fields/Primary_Division__c.field-meta.xml
<CustomField>
    <fullName>Primary_Division__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Division</label>
    <type>Checkbox</type>
</CustomField>