WS_INTEGRATION/force-app/main/default/objects/Division2Contact__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF ( AND( Active_Relationship__c , Primary_Division__c ), "Primary",
IF ( AND( Active_Relationship__c , NOT(Primary_Division__c)), "Active", "Inactive"))</formula>
    <inlineHelpText>Primary = Active and Primary
Active = Active, not Primary
Inactive = Contact not active with Division (regardless of primary)</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>